# NixMon

./: .gitignore  CMakeLists.txt  README.md
docs/Architecture/: nixmon-architecture.md
include/: protocol.h
src/client/: main.c
src/server/: main.c
